# teams-meeting-summarizer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: sample_teams_export.json
data/synthetic/summaries/: meeting_001.txt  meeting_002.txt  meeting_003.txt  meeting_004.txt  meeting_005.txt
data/synthetic/transcripts/: meeting_001.txt  meeting_002.txt  meeting_003.txt  meeting_004.txt  meeting_005.txt
docker/: Dockerfile  docker-compose.yml
docs/: AZURE_SETUP.md  TEAMS_SETUP.md
outputs/: .gitkeep
scripts/: download_models.py  evaluate.py  run_inference.py  train_summarizer.py  transcribe_audio.py
src/: __init__.py  config.py
src/api/: endpoints.py  main.py  schemas.py
src/ner/: __init__.py  hf_ner.py  spacy_ner.py  unified_ner.py
src/pipelines/: __init__.py  end_to_end.py
src/preprocess/: __init__.py  cleaner.py  segmenter.py
src/streaming/: __init__.py  realtime_pipeline.py  transcript_buffer.py  websocket_server.py
src/summarization/: __init__.py  evaluator.py  inference.py  model_loader.py  trainer.py
src/teams_integration/: __init__.py  auth.py  meetings_client.py
src/transcription/: __init__.py  azure_stt.py
src/ui/: streamlit_app.py
src/utils/: __init__.py  io.py  logger.py  metrics.py
tests/: conftest.py  test_api.py  test_pipeline.py  test_preprocess.py
